Fix map_control_group buttons hover on mobile

--- a/src/scss/includes/direction.scss
+++ b/src/scss/includes/direction.scss
@@ -833,12 +833,6 @@ input:valid:focus ~ .itinerary__field__clear {
     /* Attempt to fix rare layout bug on iOS */
     transform: translate3d(0,0,0);
 
-    &:hover {
-      background: #353c52;
-      color: #fff;
-      background-size: 25px;
-    }
-
     .directions-open & {
       display: none;
     }
